smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-object4.smithy
// Parse error at line 4, column 8 near `MyString`: Expected: ':', but found 'M' | Model
namespace com.foo
@foo(bar: "baz"
string MyString
